--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,30 @@
-web:
-  build: ./
-  ports: 
-    - "5000:5000"
-  volumes:
-    - .:/code
-  environment:
-    - GITHUB_USER
-    - GITHUB_PASSWORD
+version: '2'
+
+services:
+  web:
+    build: ./
+    restart: always
+    ports: 
+      - "5000:5000"
+    volumes:
+      - .:/code
+    environment:
+      - GITHUB_USER
+      - GITHUB_PASSWORD
+      - ZENHUB_API_TOKEN
+    depends_on:
+      - db
+
+  data:
+    image: postgres:10-alpine
+    volumes:
+      - /var/lib/postgresql
+    command: "true"
+
+  db:
+    restart: always
+    build: ./db/
+    volumes_from:
+      - data
+    ports:
+      - "5432:5432"
